apps/stormshot/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: stormshot
  namespace: stormshot
  labels:
    app.kubernetes.io/component: stormshot
    app.kubernetes.io/name: stormshot
    prometheus.monitoring/service: nginx-exporter
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: stormshot
    - name: metrics
      protocol: TCP
      port: 9118
      targetPort: metrics
  selector:
    app.kubernetes.io/component: stormshot
    app.kubernetes.io/name: stormshot
  sessionAffinity: None
  type: ClusterIP
